added main CSS and JS Folders

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>SOFAS</title>
 </head>
 <body>
-    
-    <script src="products.js"></script>
+    <script src="./js/item.js"></script>
+    <script src="./js/products.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
