Finished item page

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </footer>
   </div>
     <script src="./js/products.js"></script>
+    <script src="./js/search.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
