--- a/item.html
+++ b/item.html
@@ -29,7 +29,11 @@
         <a class="login">LOGIN</a>
       </div>
     </section>
-    <main class="itemPage" id="item_From_Array">
+    <div class="productWrap">
+
+  
+    <!-- <main class="itemPage" id="item_From_Array">
+
       <div class="imageDisplay">
         <div class="mainImg">
           <img src="./img/mainPageCarousel/pexels-william-sun-1267438.jpg" alt="">
@@ -99,8 +103,8 @@
       </div>
       
 
-    </main>
-  
+    </main> -->
+  </div>
       <footer>
         <ul class="footerLinks">
           <li><a href="#">ABOUT US</a></li>
@@ -116,8 +120,7 @@
     </footer>
 
   </div>
-    <script src="./js/item.js"></script>
     <script src="./js/products.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/item.js"></script>
   </body>
 </html>
