--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
           </ul>
         </nav>
         <div class="cart">
-          <div class="shoppingCart">
+          <div class="shoppingCart" value='0'>
             <img src="./img/Cart Button.png" alt="shopping Cart Image" />
           </div>
           <a class="login">LOGIN</a>
