--- a/item.html
+++ b/item.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div class="cart">
-        <div class="shoppingCart">
+        <div class="shoppingCart" value='0'>
           <img src="./img/Cart Button.png" alt="shopping Cart Image" />
         </div>
         <a class="login">LOGIN</a>
