home and item page responsive

--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>SOFAS</title>
+    <title>E-commerce</title>
   </head>
   <body>
     <div class="wrapper">
+      <div class="top">
+        <div class="logo">COMFORT</div>
+        <div class="bars">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
+        </div>
+      </div>
     <section class="nav">
-        <ul class="bars">
-          <li class="bar"></li>
-          <li class="bar"></li>
-          <li class="bar"></li>
-        </ul>
         <nav>
           <ul>
             <li><a class="active" href="#">HOME</a></li>
             <li><a href="./shop.html">SHOP</a></li>
-            <li><a href="#">MAGAZINE</a></li>
+            <!-- <li><a href="#">MAGAZINE</a></li> -->
           </ul>
         </nav>
         <div class="cart">
