--- a/item.html
+++ b/item.html
@@ -5,31 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>SOFAS</title>
+    <title>E-Commerce</title>
   </head>
   <body>
-    <div class="wrapper">
-    <section class="nav">
-      <ul class="bars">
-        <li class="bar"></li>
-        <li class="bar"></li>
-        <li class="bar"></li>
-      </ul>
-      <nav>
-        <ul>
-          <li><a href="./index.html">HOME</a></li>
-          <li><a href="./shop.html">SHOP</a></li>
-          <li><a href="#">MAGAZINE</a></li>
-        </ul>
-      </nav>
-      <div class="cart">
-        <div class="shoppingCart" value='0'>
-          <img src="./img/Cart Button.png" alt="shopping Cart Image" />
-        </div>
-        <a class="login">LOGIN</a>
-      </div>
-    </section>
     <div class="productWrap">
+      <div class="top">
+        <div class="logo">COMFORT</div>
+        <div class="bars">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
+        </div>
+      </div>
+    <section class="nav">
+        <nav>
+          <ul>
+            <li><a class="active" href="./index.html">HOME</a></li>
+            <li><a href="./shop.html">SHOP</a></li>
+            <!-- <li><a href="#">MAGAZINE</a></li> -->
+          </ul>
+        </nav>
+        <div class="cart">
+          <div class="shoppingCart" value='0'>
+            <img src="./img/Cart Button.png" alt="shopping Cart Image" />
+          </div>
+          <a class="login">LOGIN</a>
+        </div>
+    </section>
 
   
     <!-- <main class="itemPage" id="item_From_Array">
