--- a/shop.html
+++ b/shop.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>SOFAS</title>
+    <title>E-commerce</title>
   </head>
 
   <body>
     <div class="wrapper">
-      <section class="nav">
-        <ul class="bars">
-          <li class="bar"></li>
-          <li class="bar"></li>
-          <li class="bar"></li>
-        </ul>
+      <div class="top">
+        <div class="logo">COMFORT</div>
+        <div class="bars">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
+        </div>
+      </div>
+    <section class="nav">
         <nav>
           <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a class="active" href="#">SHOP</a></li>
-            <li><a href="#">MAGAZINE</a></li>
+            <li><a class="active" href="./index.html">HOME</a></li>
+            <li><a href="./shop.html">SHOP</a></li>
+            <!-- <li><a href="#">MAGAZINE</a></li> -->
           </ul>
         </nav>
         <div class="cart">
@@ -29,7 +32,7 @@
           </div>
           <a class="login">LOGIN</a>
         </div>
-      </section>
+    </section>
       <main>
         <div class="search">
           <div class="searchBar">
@@ -43,12 +46,12 @@
         </div>
         <div class="shopDisplay">
           <div class="filterList">
-            <h3>Filter by</h3>
+            <h3 class="filterHeader">Filter by</h3>
             <form action="submit">
               <fieldset class="collections">
                 <div class="fieldHeader" id="collections">
                   <p>Collection</p>
-                  <p class="collapsible open"></p>
+                  <p class="collapsible"></p>
                 </div>
                 <!-- <label for="Blue"
                   ><input type="checkbox" id="blue" name="blue" /> Blue
@@ -68,7 +71,7 @@
               <fieldset class="colors">
                 <div class="fieldHeader" id="colors">
                   <p>Color</p>
-                  <p class="collapsible open"></p>
+                  <p class="collapsible"></p>
                 </div>
                 <!-- <label for="Blue"
                   ><input type="checkbox" id="blue" name="blue" /> Blue
@@ -88,7 +91,7 @@
               <fieldset class="materials">
                 <div class="fieldHeader" id="materials">
                   <p>Materials</p>
-                  <p class="collapsible open"></p>
+                  <p class="collapsible"></p>
                 </div>
                 <!-- <label for="Blue"
                   ><input type="checkbox" id="blue" name="blue" /> Blue
@@ -165,21 +168,21 @@
                 </li> -->
               </ul>
             </div>
-            <div class="pagination">
-              <ul class="paginationItems">
-                <li class="pageNumber active">1</li>
-                <li class="pageNumber">2</li>
-                <li class="pageNumber">3</li>
-                <li class="pageNumber">4</li>
-                <li class="pageNumber">5</li>
-                <li class="pageNumber">6</li>
-                <li class="pageNumber">7</li>
-                <li class="pageNumber">8</li>
-                <li class="pageNumber">9</li>
-                <li class="pageNumber">10</li>
-                <li class="more">></li>
-              </ul>
-            </div>
+            <!--<div class="pagination">-->
+            <!--  <ul class="paginationItems">-->
+            <!--    <li class="pageNumber active">1</li>-->
+            <!--    <li class="pageNumber">2</li>-->
+            <!--    <li class="pageNumber">3</li>-->
+            <!--    <li class="pageNumber">4</li>-->
+            <!--    <li class="pageNumber">5</li>-->
+            <!--    <li class="pageNumber">6</li>-->
+            <!--    <li class="pageNumber">7</li>-->
+            <!--    <li class="pageNumber">8</li>-->
+            <!--    <li class="pageNumber">9</li>-->
+            <!--    <li class="pageNumber">10</li>-->
+            <!--    <li class="more">></li>-->
+            <!--  </ul>-->
+            <!--</div>-->
           </div>
         </div>
       </main>
