--- a/shop.html
+++ b/shop.html
@@ -46,8 +46,8 @@
         </div>
         <div class="shopDisplay">
           <div class="filterList">
-            <h3 class="filterHeader">Filter by</h3>
-            <form action="submit">
+            <h3 class="filterHeader" id="filterHeader">Filters</h3>
+            <form action="submit" class="filterForm">
               <fieldset class="collections">
                 <div class="fieldHeader" id="collections">
                   <p>Collection</p>
